...
        <scene sceneID="qUm-iS-fpk">
            <objects>
                <viewController storyboardIdentifier="ExpenseReportViewController" title="Expense Report" id="Lp6-oZ-ysK" customClass="ExpenseReportViewController" customModule="ExpenseTracker" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="sgO-Cn-gXp">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
                                                        <rect key="frame" x="0.0" y="80" width="398" height="34"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="between Dates :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSF-4Z-3qB">
                                                                <rect key="frame" x="0.0" y="0.0" width="161.5" height="34"/>
                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
...
                                                                <rect key="frame" x="169.5" y="0.0" width="228.5" height="32"/>
                                                                <segments>
                                                                    <segment title="Day"/>
                                                                    <segment title="Week"/>
                                                                    <segment title="Month"/>
                                                                </segments>
                                                                <color key="selectedSegmentTintColor" red="0.98823529409999999" green="0.66274509800000003" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                        <rect key="frame" x="0.0" y="161" width="398" height="34"/>
                                                        <subviews>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JlS-I8-3oU">
                                                                <rect key="frame" x="0.0" y="0.0" width="85.5" height="34"/>
                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BgY-qh-qj2">
                                                                <rect key="frame" x="93.5" y="0.0" width="304.5" height="34"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                <rect key="frame" x="0.0" y="0.0" width="127.5" height="30"/>
                                                                <color key="backgroundColor" red="0.050023272629999997" green="0.43808579440000001" blue="0.73336654899999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                <state key="normal" title="Filter by dates">
                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                                <rect key="frame" x="135.5" y="0.0" width="127" height="30"/>
                                                                <color key="backgroundColor" red="0.050023272629999997" green="0.43808579440000001" blue="0.73336654899999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                <state key="normal" title="Filter by time">
                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                                <rect key="frame" x="270.5" y="0.0" width="127.5" height="30"/>
                                                                <color key="backgroundColor" red="0.050023272629999997" green="0.43808579440000001" blue="0.73336654899999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                <state key="normal" title="filter by category">
                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
                                                            <rect key="frame" x="8" y="8" width="382" height="126"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9K4-pU-v0
                                                                    <rect key="frame" x="0.0" y="0.0" width="294.5" height="20.5"/>
                                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaseli
                                                                    <rect key="frame" x="302.5" y="-0.5" width="71.5" height="21.5"/>
                                                                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
