...
        }
    }
    
    //MARK: Outlate Actions
    
    @IBAction func buttonAddPasswordAction(_ sender: Any) {
        self.showInputDialog(title: "Expense Tracker", subtitle: "Add Password to protect your data.", actionTitle: "Save", cancelTitle: "Cancel", inputPlaceholder: "Enter Password",inputTypeSecure: true, inputKeyboardType: .default, cancelHandler: { (action) in
            //do nothing
        }) { (passwordString) in
            UserDefaults.standard.set(passwordString, forKey: "password")
            self.showAlertDialog(title: nil, Message: "Password saved.", actiontitle: "okay")
        }
    }
...
        let categoryString : [String] = collectionViewExpenseCategory.indexPathsForSelectedItems?.compactMap({ (indexpath) -> String in
            return "\(DatabaseManager.shared.categories[indexpath.row].categoryId)"
        }) ?? []
        
        //validate text inputs
        if textFieldExpenseTitle.text?.isOnlyWhiteSpaces() ?? false{
            self.showAlertDialog(title: nil, Message: "Please enter title", actiontitle: "Okay") { (action) in
                self.textFieldExpenseTitle.becomeFirstResponder()
            }
        }else if textFieldExpenseAmount.text?.isOnlyWhiteSpaces() ?? false{
            self.showAlertDialog(title: nil, Message: "Please enter Amount", actiontitle: "Okay"){ (action) in
                 self.textFieldExpenseAmount.becomeFirstResponder()
            }
...
