...
                                                                </cells>
                                                                <connections>
                                                                    <outlet property="dataSource" destination="d25-QL-e2N" id="eqi-Bc-nuN"/>
                                                                    <outlet property="delegate" destination="d25-QL-e2N" id="V24-TN-w08"/>
                                                                </connections>
                                                            </collectionView>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="18N-ZF-k1H">
                                                                <rect key="frame" x="0.0" y="368" width="398" height="20.5"/>
                                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                                <nil key="textColor"/>
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="DMk-ZR-b8m">
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DBJ-uy-Lco">
                                                <rect key="frame" x="32" y="497.5" width="350" height="40"/>
                                                <color key="backgroundColor" red="0.74671882389999999" green="0.2905939817" blue="0.29410105939999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="40" id="3we-0D-85P"/>
                                                </constraints>
                                                <state key="normal" title="Add Expense">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
                                                <connections>
                                                    <action selector="buttonAddExpenseAction:" destination="d25-QL-e2N" eventType="touchUpInside" id="c4W-f7-WJb"/>
                                                </connections>
                                            </button>
...
