...
    
    //MARK: Category
    
    /// add default categories
    func addDefaultCategories(){
        DatabaseManager.shared.categories = []
        let categoriesString = ["Fuel","Food","Grocery","Electronics","Shopping","Subscriptions"]
        for (index,category) in categoriesString.enumerated(){
            
            ///read categories and append to array if not addded before then add
            var isAlreadyAdded : Bool = false
            let queryStatementString = "SELECT id FROM \(DatabaseTable.category.rawValue) WHERE id = ?;"
            var queryStatement: OpaquePointer? = nil
...
